--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.2",
     "react-navigation-tabs": "^2.10.1",
-    "react-number-format": "^4.4.4"
+    "react-number-format": "^4.4.4",
+    "expo-blur": "~8.2.2"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
