--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "axios": "^0.21.1",
     "date-fns": "^2.16.1",
     "expo": "~40.0.0",
+    "expo-file-system": "~9.3.0",
+    "expo-intent-launcher": "~8.4.0",
     "expo-linear-gradient": "~8.4.0",
+    "expo-notifications": "~0.8.2",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-easy-toast": "^2.0.0",
     "react-native-elements": "^3.1.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-linear-gradient": "^2.5.6",
@@ -26,11 +30,11 @@
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.0",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "11.0.0",
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.10.2",
     "react-navigation-tabs": "^2.10.1",
-    "react-number-format": "^4.4.4",
-    "expo-blur": "~8.2.2"
+    "react-number-format": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
